# zkwasm-mini-rollup

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.merkle  README.md  build.sh  changes.patch  docker-compose.yml  package-lock.json  service.docker  start.sh
.github/workflows/: build-merkle-image.yml
abi/: Cargo.toml
abi/src/: lib.rs
convention/: Cargo.toml
convention/src/: err.rs  event.rs  lib.rs  market.rs  objects.rs  player.rs  settlement.rs
dbservice/: Cargo.toml  run.sh
dbservice/src/: main.rs
docker/: app.docker  service.docker
example/: Cargo.toml  Makefile
example/src/: config.rs  events.rs  game.rs  lib.rs  player.rs  settlement.rs  state.rs  test.rs
host/: Cargo.toml  Makefile
host/src/: jubjub.rs  lib.rs  poseidon.rs
host/src/context/: datacache.rs  merkle.rs  mod.rs  poseidon.rs
host/src/context/jubjub/: mod.rs
host/src/context/jubjub/sum/: mod.rs
src/: cache.rs  datahash.rs  db.rs  lib.rs  merkle.rs  mongomerkle.rs
towerdefence/: README.md
ts/: env.example  package-lock.json  package.json  publish.sh  re-install.sh  tsconfig.json
ts/src/: Proxy.json  account.ts  alice.ts  automota.ts  benchrpc.ts  bob.ts  commit.ts  commitment.ts  config.ts  contract.ts  convention.ts  dbprocess.ts  event.ts  index.js  index.ts  init_admin.ts  lib.ts  process.ts  proof-worker.ts  prover.ts  query.ts  reproduce.ts  rpc.ts  rpctest.mjs  rpctest.ts  run.ts  service.ts  settle.ts  sign.ts  test.js  test.ts  test.tsx  test_has_task.ts  test_prover.ts  test_query_image.ts  withdraw_analysis.ts
ts/src/application/: application.d.ts  application.js  application_bg.js  application_bg.wasm  application_bg.wasm.d.ts  application_loader.js  package.json
ts/src/bootstrap/: bootstrap.d.ts  bootstrap.js  bootstrap_bg.js  bootstrap_bg.wasm  bootstrap_bg.wasm.d.ts  dbprocess.ts  package.json  rpcbind.js  syncrpc.cjs  tsconfig.json
ts/src/js/: bootstrap.d.ts  bootstrap.js  bootstrap_bg.js  bootstrap_bg.wasm  bootstrap_bg.wasm.d.ts
ts/src/schemas/: global-bundle.ts
ts/src/service/: proof-submission-service.ts
ts/src/services/: global-bundle-service.ts  migration-service.ts  state-snapshot-service.ts
ts/src/storage/: market.ts  object.ts  position.ts
