[package]
name = "zkwasm-rest-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_rest_abi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
primitive-types = {version="0.12.1", default-features = false}
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git", features=["witness"] }
derive_builder = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.83"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
